     impl, this was probably an unintentional way of achieving
     the desired effect.

   - TypeDecorator.load_dialect_impl() returns "self.impl" by
     default, i.e. not the dialect implementation type of 
     "self.impl".   This to support compilation correctly.  
     Behavior can be user-overridden in exactly the same way 
     as before to the same effect.
     
   - Table.tometadata() now copies Index objects associated
     with the Table as well.

   - Table.tometadata() issues a warning if the given Table 
     is already present in the target MetaData - the existing
     Table object is returned.

   - An informative error message is raised if a Column 
     which has not yet been assigned a name, i.e. as in 
     declarative, is used in a context where it is
     exported to the columns collection of an enclosing
     select() construct, or if any construct involving
     that column is compiled before its name is 
     assigned.

   - as_scalar(), label() can be called on a selectable
     which contains a Column that is not yet named.
     [ticket:1862]

   - Fixed recursion overflow which could occur when operating
     with two expressions both of type "NullType", but
     not the singleton NULLTYPE instance. [ticket:1907]
     
- declarative
   - @classproperty (soon/now @declared_attr) takes effect for 
     __mapper_args__, __table_args__, __tablename__ on 
     a base class that is not a mixin, as well as mixins.
     [ticket:1922]

   - @classproperty 's official name/location for usage
     with declarative is sqlalchemy.ext.declarative.declared_attr.
     Same thing, but moving there since it is more of a
     "marker" that's specific to declararative, 
     not just an attribute technique.  [ticket:1915]

   - Fixed bug whereby columns on a mixin wouldn't propagate
     correctly to a single-table, or joined-table,
     inheritance scheme where the attribute name is
     different than that of the column. [ticket:1930],